tests/ui/eii/static/mismatch_mut.stderr
error: mutability does not match with the definition of`#[hello]`
  --> $DIR/mismatch_mut.rs:10:1
   |
LL | #[hello]
   | ^^^^^^^^

error: aborting due to 1 previous error

